force-app/main/default/objects/Customer_Complaints__c/Customer_Complaints__c.object-meta.xml
<CustomObject>
    <description>This object is used to capture all the complaints related to booking.</description>
    <label>Customer Complaints</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Customer Complaints ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers complaints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>