force-app/main/default/objects/Customer_Complaints__c/fields/Booking_ID__c.field-meta.xml
<CustomField>
    <fullName>Booking_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking ID</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Customers complaints</relationshipLabel>
    <relationshipName>Customers_complaints</relationshipName>
    <type>Lookup</type>
</CustomField>