force-app/main/default/objects/Customer_Complaints__c/fields/Category_of_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Category_of_Complaint__c</fullName>
    <description>Captures the category of the complaint that falls under</description>
    <label>Category of Complaint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resale</fullName>
            </value>
            <value>
                <fullName>Rebate</fullName>
            </value>
            <value>
                <fullName>Cancellation and Refund</fullName>
            </value>
            <value>
                <fullName>Mis-Sell</fullName>
            </value>
            <value>
                <fullName>Late Payment Waiver</fullName>
            </value>
            <value>
                <fullName>Construction NOC</fullName>
            </value>
            <value>
                <fullName>Cancellation and Transfer of funds</fullName>
            </value>
            <value>
                <fullName>Payment Plan Extension</fullName>
            </value>
            <value>
                <fullName>Compensation</fullName>
            </value>
            <value>
                <fullName>Handover</fullName>
            </value>
            <value>
                <fullName>Cancellation through Dubai Court</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Area Change</fullName>
            </value>
            <value>
                <fullName>Name addition</fullName>
            </value>
            <value>
                <fullName>Ownership Change</fullName>
            </value>
            <value>
                <fullName>Booking</fullName>
                <isActive>false</isActive>
                <label>Booking</label>
            </value>
            <value>
                <fullName>Collections / Payments</fullName>
                <isActive>false</isActive>
                <label>Collections / Payments</label>
            </value>
            <value>
                <fullName>Inspection/Handover</fullName>
                <isActive>false</isActive>
                <label>Inspection/Handover</label>
            </value>
            <value>
                <fullName>Mortgage</fullName>
                <isActive>false</isActive>
                <label>Mortgage</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <isActive>false</isActive>
                <label>Others</label>
            </value>
            <value>
                <fullName>Pre-Registration</fullName>
                <isActive>false</isActive>
                <label>Pre-Registration</label>
            </value>
            <value>
                <fullName>SPA</fullName>
                <isActive>false</isActive>
                <label>SPA</label>
            </value>
            <value>
                <fullName>Sales and Broker Issues</fullName>
                <isActive>false</isActive>
                <label>Sales and Broker Issues</label>
            </value>
            <value>
                <fullName>Terminations/Cancellations</fullName>
                <isActive>false</isActive>
                <label>Terminations/Cancellations</label>
            </value>
            <value>
                <fullName>Title Deed</fullName>
                <isActive>false</isActive>
                <label>Title Deed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>