force-app/main/default/objects/Customer_Complaints__c/fields/Closing_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Closing_Remarks__c</fullName>
    <label>Closing Remarks</label>
    <type>TextArea</type>
</CustomField>