force-app/main/default/objects/Customer_Complaints__c/fields/Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Closure_Date__c</fullName>
    <description>Captures the date of the complaint closed date. (Automatically populates the date on which the complaint closure status is being set to closed).</description>
    <label>Closure Date</label>
    <type>Date</type>
</CustomField>