force-app/main/default/objects/Customer_Complaints__c/fields/Complaint_Closure_Status__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Closure_Status__c</fullName>
    <description>Captures the status of the complaint if it is active or closed.</description>
    <label>Complaint Closure Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>