force-app/main/default/objects/Customer_Complaints__c/fields/Complaint_Date__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Date__c</fullName>
    <description>Captures the date of complaint raised.</description>
    <label>Complaint Date</label>
    <type>Date</type>
</CustomField>