force-app/main/default/objects/Customer_Complaints__c/validationRules/Closing_Remarks_to_be_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Closing_Remarks_to_be_mandatory</fullName>
    <active>true</active>
    <description>This rule is used to make the closing remarks mandatory when the closure status is set to closed.</description>
    <errorConditionFormula>AND(
TEXT(Complaint_Closure_Status__c) = &quot;Closed&quot;,
ISBLANK(Closing_Remarks__c))</errorConditionFormula>
    <errorMessage>Please enter the Closing Remarks</errorMessage>
</ValidationRule>