force-app/main/default/objects/Customer_Complaints__c/validationRules/Complaint_detail_Remarks_to_be_mandator.validationRule-meta.xml
<ValidationRule>
    <fullName>Complaint_detail_Remarks_to_be_mandator</fullName>
    <active>true</active>
    <description>This is to make complaint detail/ remarks madatory when complaint closure status is active</description>
    <errorConditionFormula>AND(
TEXT(Complaint_Closure_Status__c) = &quot;Active&quot;,
ISBLANK(Complaint_Details_Remarks__c))</errorConditionFormula>
    <errorDisplayField>Complaint_Details_Remarks__c</errorDisplayField>
    <errorMessage>Please enter the Complaint / Detail Remarks.</errorMessage>
</ValidationRule>