force-app/main/default/objects/Customer_Complaints__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Booking_ID__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>Category_of_Complaint__c</columns>
    <columns>Complaint_Closure_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>